tests/Driver/unknown-arg.sora
// RUN: %sorac -blargh %s 2>&1 | %filecheck %s
// CHECK: error: unknown argument '-blargh'